# swagger.yaml
@@ -4569,6 +4569,131 @@ paths:
                     type: string
                     example: >-
                       Update successfull.
+  /admin/subscriptions:
+    get:
+      tags:
+        - 👨‍💼 Pipopro Admin
+      summary: Get subscriptions
+      description: >-
+        The API endpoint allows you to retrieve the pipupro admin to get subscriptions
+      operationId: subscriptions
+      responses:
+        '200':
+          description: subscriptions
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '443'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:44:47 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"1bb-YVaffq7t8o3of0yDl9g26tprr/8"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '493'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '631'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+  /admin/subscriptions/{subscriptionId}:
+    get:
+      tags:
+        - 👨‍💼 Pipopro Admin
+      summary: Get subscriptionbyid
+      description: >-
+        The API endpoint allows you to retrieve the pipupro admin to get subscription by id
+      operationId: subscriptionbyId
+      parameters:
+        - name: subscriptionId
+          in: path
+          required: true
+          description: The subscription id
+      responses:
+        '200':
+          description: subscription id
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '443'
+            Date:
+              schema:
+                type: string
+                example: Fri, 30 Jun 2023 06:44:47 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"1bb-YVaffq7t8o3of0yDl9g26tprr/8"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            RateLimit-Limit:
+              schema:
+                type: string
+                example: '500'
+            RateLimit-Remaining:
+              schema:
+                type: string
+                example: '493'
+            RateLimit-Reset:
+              schema:
+                type: string
+                example: '631'
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
   /subscription-plans:
     get:
       tags:
